<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <include layout="@layout/tobar_layout"/>
    <Button
        android:layout_below="@+id/rl_tobar"
        android:visibility="gone"
        android:layout_marginTop="@dimen/space_20"
        android:id="@+id/but_modify_admin_password"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/space_20"
        android:background="@drawable/buton_sel"
        android:text="@string/text_modify_admin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<TextView

    android:layout_marginTop="@dimen/space_10"
    android:layout_marginLeft="@dimen/space_10"
    android:layout_below="@+id/but_modify_admin_password"
    android:id="@+id/te_modify_admin_password"
    android:textColor="#f40606"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
       <LinearLayout
           android:layout_centerInParent="true"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <Button

               android:id="@+id/but_login_two"
               android:textSize="@dimen/text_size_14"
               android:textColor="@color/white"
               android:layout_marginLeft="@dimen/space_20"
               android:background="@drawable/buton_sel"
               android:text="@string/text_login_two"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content" />
           <Button
               android:visibility="gone"
               android:id="@+id/but_login_three"
               android:textSize="@dimen/text_size_14"
               android:textColor="@color/white"
               android:layout_marginLeft="@dimen/space_20"
               android:background="@drawable/buton_sel"
               android:text="@string/text_login_three"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content" />
           <Button
               android:visibility="gone"
               android:id="@+id/but_login_four"
               android:textSize="@dimen/text_size_14"
               android:textColor="@color/white"
               android:layout_marginLeft="@dimen/space_20"
               android:background="@drawable/buton_sel"
               android:text="@string/text_login_four"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content" />

           <Button
               android:id="@+id/but_admin_login"
               android:textSize="@dimen/text_size_14"
               android:textColor="@color/white"
               android:layout_marginRight="@dimen/space_20"
               android:layout_marginLeft="@dimen/space_20"
               android:background="@drawable/buton_sel"
               android:text="@string/text_admin_login"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content" />
       </LinearLayout>
</RelativeLayout>